<resources>
    <string name="app_name">Arusha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_home_footer">ca-app-pub-9811483815457531/3557149603</string>

    <!--activity titles-->
    <string name="activity_title_landing">JWare Arusha </string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="text_hint_direct">Type Name or Choose Category</string>
    <string name="fragment_title_map">Map</string>
    <string name="fragment_title_events">Events</string>
    <string name="email_subject">JWare Arusha Email Message</string>


    <string name="proxima_font_light">ProximaNova-Light.otf</string>
    <string name="proxima_font_semi_bold">proximanova_semibold.otf</string>
    <string name="proxima_font_regular">ProximaNova-Regular.otf</string>
    <string name="proxima_font_bold">ProximaNova-Bold.otf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="you_are_here">You are Here</string>
    <string name="server_error">Server Error</string>
    <string name="error">Error</string>
    <string name="no_data">No Data Available</string>
    <string name="loading">Loading</string>
    <string name="disable_location">Please enable location on your device</string>
    <string name="search_location">Search Location</string>
    <string name="get_direction">Get Directions</string>


    <!--Text to be converted conveted English file-->
    <string name="activity_exchange_rate">Exchange Rates</string>
    <string name="text_map">Map</string>
    <string name="text_directory">Directory</string>
    <string name="text_events">Events</string>
    <string name="activity_directory">Directory</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_events">Events</string>
    <string name="text_change_language">CHANGE LANGUAGE</string>
    <string name="drawer_top_10_things">Top Things To Do</string>
    <string name="text_change_language_small">Change Language</string>
    <string name="text_msg_facebook">Email us</string>
    <string name="text_share_app">Share App</string>
    <string name="drawer_diretory">Directory</string>
    <string name="text_currency">CURRENCY</string>
    <string name="text_buy">BUY</string>
    <string name="text_sell">SELL</string>
    <string name="text_updated_by">UPDATED BY</string>
    <string name="text_currency_title">Tanzanian Shilling Exchange Rate as of</string>
    <string name="text_search">Search</string>
    <string name="are_you_sure">Are you sure want to change Language?</string>
    <string name="button_ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="label_to">To</string>
    <string name="label_from">From</string>
    <string name="label_your_location">Your Location</string>
    <string name="label_type_destination_location">Type Destination Here</string>
    <string name="failed">Couldnot found such routing</string>
    <string name="email_body">This message is being sent from the JWare Arusha App. Please provide your comments below:</string>
    <string name="text_required">Required*</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="need_internet">Internet connection is required for first time to use app</string>
    <string name="no_location">No co-ordinate for location</string>
    <string name="no_cache_data">No Cache Data Available</string>
    <string name="no_internet_connected">No Internet Connection</string>
    <string name="no_internet_detail">You are offline please check your internet connection</string>
    <string name="mail_address">app@jwareconsultingfirm.com</string>
    <string name="viber_not_installed">Viber not Installed</string>
    <string name="whatsapp_not_installed">WhatsApp not Installed</string>
    <string name="call_title">Place a Call?</string>
    <string name="call_message">This will redirect you to call</string>

</resources>
